@@ -164,6 +164,9 @@
 #define MSG_NO_CERT_FOUND _("No certificate found.")
 #define MSG_HOSTNAME_NOT_MATCH _("Hostname not match.")
 #define MSG_NO_FILES_TO_DOWNLOAD _("No files to download.")
+#define MSG_WARN_NO_CA_CERT \
+  _("You may encounter the certificate verification error with HTTPS server."\
+    " See --ca-certificate and --check-certificate option.")
 
 #define EX_TIME_OUT _("Timeout.")
 #define EX_INVALID_CHUNK_SIZE _("Invalid chunk size.")
